feat:叶老师定稿版本3.13
1.风格识别的结果，三个结果体现次序关系：通过颜色渐变体现
2.style界面“识别结果”+中文冒号
3.style界面识别错误？更改样式：红色，下划线，去掉边框和背景颜色
4.mine界面“云墨济心”由同济大学叶晨老师团队开发，开发人员：书法风格：书法评分：
5.mine界面同济大学校徽的图标不要拉伸，要圆
6.每一个页面增加返回上一页的功能，上传习作功能之后，切割出来很多字，选择某一个字结束后，可以直接回到切割好的那一页，再选择其他字.

--- a/project.config.json
+++ b/project.config.json
@@ -13,13 +13,15 @@
     },
     "coverView": false,
     "postcss": false,
-    "minified": false,
-    "enhance": false,
+    "minified": true,
+    "enhance": true,
     "showShadowRootInWxmlPanel": false,
     "packNpmRelationList": [],
     "ignoreUploadUnusedFiles": true,
     "compileHotReLoad": false,
-    "skylineRenderEnable": true
+    "skylineRenderEnable": true,
+    "es6": true,
+    "uglifyFileName": false
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
@@ -34,5 +36,5 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wxa16b91cd45368f8e"
+  "appid": "wx8a6b60097c4c2972"
 }
